# embedded-firmware-test-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: demo.json  openocd_example.json
data/: history_issues.jsonl
docs/: APPLICATION_ANSWER.md  ARCHITECTURE.md
embedded_test_agent/: __init__.py  cli.py  config.py  models.py  orchestrator.py  rules.py  server.py  utils.py
embedded_test_agent/agents/: base.py  build.py  code_analysis.py  flash.py  log_analysis.py  report.py  scheduler.py  serial_collect.py
embedded_test_agent/integrations/: ci.py  feishu.py  git_client.py  llm.py  serial_port.py  shell.py
examples/firmware/: Makefile
examples/firmware/include/: board_config.h
examples/firmware/src/: main.c
examples/firmware/src/drivers/: imu.c
scripts/: feishu_webhook_example.sh
tests/: test_log_analysis.py  test_orchestrator_mock.py
